round of icon convert from icons8to fa, add colored fa icons to check in, garden and unit key checkouts

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -52,7 +52,7 @@ template(name='follow')
         .ui.header
             i.user.plus.icon
             |follow
-        +user_list_toggle key='follower_ids' icon='rss' add_label='Follow' remove_label='Unfollow' color='blue'
+        +user_list_toggle key='follower_ids' icon='rss' add_label='Follow' remove_label='Unfollow' color='black'
 
 
 template(name='toggle_edit')
