--- a/client/chat.jade
+++ b/client/chat.jade
@@ -118,9 +118,8 @@ template(name='view_chats')
                 //- .ui.label(title='Unread') #{unread_message_count} Unread
                 .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
                     i.secured-letter.icon
-                //- //- .ui.inline.grey.header 
-                //-     i.tags.icon
-                //- +i name='tags' classes='ui inline mini image'
+                .ui.inline.grey.header 
+                    i.tags.icon
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
@@ -165,13 +164,12 @@ template(name='view_chat')
                         if in_chat
                             //- i.sign.in.link.icon.leave_chat(title='leave')
                             .ui.basic.button.leave_chat
-                                +i name='leaving-queue' title='leave' classes='ui mini inline image'
+                                i.sign.in.icon
                                 |leave
                         else
                             .ui.basic.button.join_chat
-                                +i name='joining-queue' title='join' classes='ui mini inline image'
+                                i.sign.out.icon
                                 |join
-                            //- i.sign.out.link.icon.join_chat(title='join')
                     .ui.relaxed.list
                         each participants
                             .item
