--- a/client/styles.css
+++ b/client/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Ubuntu', sans-serif !important;
+    /* font-family: 'Ubuntu', sans-serif !important; */
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
@@ -76,10 +76,10 @@ input{
 .shadowed{
     box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.2) !important;
 }
-.button, .segment{
+.button{
     /* -webkit-border-radius: 10px !important; */
     /* -moz-border-radius: 10px !important; */
-    border-radius: 12px !important;
+    border-radius: 10px !important;
 }
 
 
@@ -123,7 +123,7 @@ input{
 /* .ui.header{
   font-family: 'Ubuntu', sans-serif !important;
 } */
-a {
+/* a {
   font-family: 'Ubuntu', sans-serif !important;
 }
 .bat_black {
@@ -131,13 +131,13 @@ a {
 }
 .bat_white {
   font-family: 'bat_white', sans-serif !important;
-}
+} */
 /* .card a.header {
   color: #482d1b !important;
 } */
-.ui.button .ui.label {
+/* .ui.button .ui.label {
   font-family: 'Ubuntu', sans-serif !important;
-}
+} */
 
 .label {
   animation: fadein .5s;
@@ -238,6 +238,8 @@ a {
 .header-wrapper {
   position: absolute;
   top:0px;
+  width: 100%;
+  min-width: 100%;
   /* height:100%; */
   /* background-color:white; */
 }
