--- a/client/users.jade
+++ b/client/users.jade
@@ -134,9 +134,9 @@ template(name='users')
         .row
             .sixteen.wide.column
                 h1.ui.center.aligned.grey.header 
-                    +i name='groups'
-                    //- i.users.grey.icon
-                    |Users
+                    //- +i name='groups'
+                    i.users.grey.icon
+                    |users
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
                     input.username_search(type='text' placeholder='lookup name...')
