--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -32,7 +32,7 @@ template(name='model_edit')
                         each fields
                             .title 
                                 |#{rank}
-                                +ismall name=icon classes='ui avatar image'
+                                i.icon(class=icon)
                                 |#{title} 
                                 i.dropdown.icon
                             +field_edit
@@ -55,7 +55,7 @@ template(name='model_view')
                             if title
                                 |#{title}
                             else
-                                | View #{model}
+                                | view #{model}
             .row
                 .four.wide.column
                     // .ui.header
@@ -126,10 +126,9 @@ template(name='field_edit')
         +single_doc_edit key='field_type' ref_model='field_type' label='field type' direct=true                 
         +multi_doc_edit key='view_roles' ref_model='role' label='view roles' direct=true icon='eye'          
         +multi_doc_edit key='edit_roles' ref_model='role' label='edit roles' direct=true icon='pencil'        
-        +number_edit key='rank' label='Rank' direct=true                 
+        +number_edit key='rank' label='rank' direct=true                 
         //- +text_edit key='ref_model' label='Reference Model' direct=true
         +boolean_edit key='faceted' label='faceted' direct=true
-
         if is_ref  
             +single_doc_edit key='ref_model' ref_model='model' label='reference model' direct=true
         else if is_user_ref  
